# px4_humble

./: .gitignore  Chamber1.sdf  Dockerfile  README.md  ldc.rviz  lgpis_test_1.sdf
extra_ros2_ws/src/double_integrator_bring_up/: package.xml
extra_ros2_ws/src/double_integrator_bring_up/launch/: start_simulation_moving_obstacle.launch.py  start_takeoff.launch.py
extra_ros2_ws/src/double_integrator_test/: CMakeLists.txt  package.xml
extra_ros2_ws/src/double_integrator_test/include/double_integrator_test/: double_integrator.hpp  double_integrator_moving_obs.hpp  model_state_publisher.hpp  trajectory.hpp
extra_ros2_ws/src/double_integrator_test/src/: double_integrator_2.cpp  double_integrator_moving_obs.cpp  gp_matern32.cpp  sphere_and_cylinder_test.cpp  test_takeoff.cpp  trajectory.cpp
extra_ros2_ws/src/double_integrator_test/test/: controller_test.cpp  trajectory_velocity_acceleration_test.cpp
extra_ros2_ws/src/px4_to_ros_bridge/: package.xml
extra_ros2_ws/src/tf2_manager/: CMakeLists.txt  package.xml
extra_ros2_ws/src/tf2_manager/src/: realsense_test.cpp
extra_ros2_ws/src/visual_to_px4/: CMakeLists.txt  package.xml
extra_ros2_ws/src/visual_to_px4/src/: T265_to_px4.cpp  vicon_to_px4.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/log_gpis/include/log_gpis/: gp_matern32.hpp  logGPIS.hpp
install/log_gpis/share/log_gpis/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/log_gpis/share/log_gpis/cmake/: export_log_gpis__rosidl_generator_cExport-noconfig.cmake  export_log_gpis__rosidl_generator_cExport.cmake  export_log_gpis__rosidl_generator_cppExport.cmake  export_log_gpis__rosidl_generator_pyExport-noconfig.cmake  export_log_gpis__rosidl_generator_pyExport.cmake  export_log_gpis__rosidl_typesupport_fastrtps_cExport.cmake  export_log_gpis__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  logGPISExport-noconfig.cmake  logGPISExport.cmake  log_gpisConfig.cmake  log_gpis__rosidl_typesupport_cExport-noconfig.cmake  log_gpis__rosidl_typesupport_cExport.cmake  log_gpis__rosidl_typesupport_cppExport.cmake  log_gpis__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  (+3 more)
log/: latest_build
qpOASES_test/simple_qps/: CMakeLists.txt
qpOASES_test/simple_qps/include/simple_qps/: program_interface.hpp
qpOASES_test/simple_qps/src/: main.cpp
ros2_ws/: TODO
ros2_ws/src/camera_to_occupancy/: CMakeLists.txt  package.xml
ros2_ws/src/camera_to_occupancy/include/camera_to_occupancy/: camera_test.hpp  camera_to_occupancy.hpp  save_cloud.hpp
ros2_ws/src/camera_to_occupancy/src/: camera_test.cpp  camera_to_occupancy.cpp  camera_to_occupancy_old.cpp  old.cpp  save_cloud.cpp  test
ros2_ws/src/depth_camera_test_bring_up/: CMakeLists.txt  package.xml
ros2_ws/src/depth_camera_test_bring_up/launch/: test.launch.py  test_tracking.launch.py
ros2_ws/src/double_integrator_bring_up/: CMakeLists.txt  package.xml
ros2_ws/src/double_integrator_bring_up/launch/: start_simulation.launch.py  start_simulation_multi.launch.py  start_simulation_takeoff.launch.py  start_takeoff.launch.py
ros2_ws/src/double_integrator_bring_up/rviz/: log_gpis_test.rviz
ros2_ws/src/double_integrator_test/: +  CMakeLists.txt  package.xml
ros2_ws/src/double_integrator_test/include/double_integrator_test/: .bezier_utilities.hpp.swp  .double_integrator.hpp.swo  .double_integrator.hpp.swp  .trajectories.hpp.swp  .trajectory.hpp.swp  bezier_utilities.hpp  double_integrator.hpp  double_integrator_2.hpp  double_integrator_acceleration.hpp  gp_matern32.hpp  logGPIS.hpp  model_pose_publisher.hpp  test_multi_gpis.hpp  test_takeoff.hpp  trajectories.hpp  trajectory.hpp
ros2_ws/src/double_integrator_test/src/: .bezier_utilities.cpp.swp  .double_integrator.cpp.swp  .trajectory.cpp.swp  bezier_utilities.cpp  double_integrator.cpp  double_integrator_2.cpp  double_integrator_acceleration.cpp  double_integrator_casy_test.cpp  gp_matern32.cpp  logGPIS.cpp  model_state_publisher.cpp  sphere_and_cylinder_test.cpp  test_multi_gpis.cpp  test_takeoff.cpp  trajectory.cpp
ros2_ws/src/double_integrator_test/test/: bezier_acceleration_test.cpp  bezier_test.cpp  test_circle.cpp  test_trajectories.cpp  trajectory_velocity_acceleration_test.cpp
ros2_ws/src/drone_trajectory_test/: package.xml  setup.cfg  setup.py
ros2_ws/src/drone_trajectory_test/drone_trajectory_test/: drone_trajectory.py  reference_trajectory.py
ros2_ws/src/log_gpis/: CMakeLists.txt  package.xml
ros2_ws/src/log_gpis/include/log_gpis/: gp_matern12.hpp  gp_matern32.hpp  logGPIS.hpp
ros2_ws/src/log_gpis/log_gpis/: logGPIS.py  matern32GP.py
ros2_ws/src/log_gpis/msg/: QueryEstimate.msg
ros2_ws/src/log_gpis/scripts/: logGPIS_node.py
ros2_ws/src/log_gpis/src/: gp_matern12.cpp  gp_matern32.cpp  logGPIS.cpp
ros2_ws/src/log_gpis/srv/: MultipleQueryEstimate.srv  QueryEstimate.srv
ros2_ws/src/occupancy_map_creator/: CMakeLists.txt  package.xml
ros2_ws/src/occupancy_map_creator/include/occupancy_map_creator/: occupancy_map_creator.hpp
ros2_ws/src/occupancy_map_creator/src/: occupancy_map_creator.cpp
ros2_ws/src/px4_to_ros_bridge/: CMakeLists.txt
ros2_ws/src/px4_to_ros_bridge/src/: px4_msgs_bridge.cpp
ros2_ws/src/simulation_manager/: CMakeLists.txt  package.xml
ros2_ws/src/simulation_manager/include/simulation_manager/: double_integrator_test.cpp  double_integrator_test.hpp  gazebo_manager.hpp  world_manager.hpp
ros2_ws/src/simulation_manager/src/: double_integrator_test.cpp  gazebo_manager.cpp  world_manager.cpp
ros2_ws/src/tf22/: CMakeLists.txt  package.xml
ros2_ws/src/tf2_manager/: CMakeLists.txt
ros2_ws/src/tf2_manager/src/: ldc_tf_manager.cpp  tf2_gazebo_manager.cpp
ros2_ws/src/vicon_manager/: CMakeLists.txt  package.xml
ros2_ws/src/vicon_manager/include/vicon_manager/: T265_to_odometry.hpp  vicon_to_odometry.hpp
ros2_ws/src/vicon_manager/src/: T265_to_odometry.cpp  vicon_to_odometry.cpp
ros2_ws/src/visual_to_px4/: CMakeLists.txt
ros2_ws/src/visual_to_px4/src/: T265_to_px4.cpp
(+16 files in other folders)
