<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_to_px4</name>
  <version>1.0.0</version>
  <description>
	  This packages contains a node that takes in messages from the vicon_receiver package
	  and republish them on the VechicleOdometry topic of PX4 to let it fuse with its
	  internal Kalman filter
  </description>
  <maintainer email="biagio.trimarchi2@unibo.it">Biagio Trimarchi</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
