<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_camera_test_bring_up</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="docker-dev@todo.todo">docker-dev</maintainer>
  <license>TODO: License declaration</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>realsense2_camera</depend>
	<depend>camera_to_occupancy</depend>
	<depend>vicon_receiver</depend>
	<depend>vicon_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
